--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-api",
+  "name": "rapper-name-test",
   "version": "1.0.0",
   "description": "Make a simple api",
   "main": "index.js",
@@ -7,11 +7,20 @@
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+     "url": "git+https://github.com/Koethan/rapper-name-test.git"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.7"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/Koethan/rapper-name-test/issues"
+  },
+  "homepage": "https://github.com/Koethan/rapper-name-test#readme"
 }
+
